--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>welcome(황빈)</title>
+    <title>welcome</title>
     <meta charset="utf-8">
 </head>
 <body>
@@ -12,9 +12,9 @@
     <li><h4><a href="2.html">css</a></li>
     <li><h4><a href="3.html">jS</a></li>
     <li><h4><a href="연습.html">연습</a></li>
-</ol>
-<h2>html</h2>
-<img src="사진2.jpg" width="300">
+    <li><h4><a href="checkbox.html">checkbox</a></li></ol>
+
+<img src="사진2.jpg" width="200">
 
 </body>
 </html>
