--- a/1.html
+++ b/1.html
@@ -7,7 +7,7 @@
 <body>
     <h1><a href="index.html">WEB</a></h1>
     <ol>
-    <li><h4><a href="1.html">html</a></li>
+    <li><h4><a href="1.html"><font color="red">html</font></a></li>
     <li><h4><a href="2.html">css</a></li>
     <li><h4><a href="3.html">jS</a></li>
     <li><h4><a href="연습.html">연습</a></li>
