--- a/2.html
+++ b/2.html
@@ -3,12 +3,15 @@
 <head>
     <title>WEB-CSS(황빈)</title>
     <meta charset="utf-8">
+    <style>a {
+        color:black;text-decoration: none;
+    }</style>
 </head>
 <body>
     <h1><a href="index.html">WEB</a></h1>
     <ol>
     <li><h4><a href="1.html">html</a></li>
-    <li><h4><a href="2.html">css</a></li>
+    <li><h4><a href="2.html" style="color:red;text-decoration: underline">css</a></li>
     <li><h4><a href="3.html">jS</a></li>
     <li><h4><a href="연습.html">연습</a></li>
 </ol>
