--- a/3.html
+++ b/3.html
@@ -9,7 +9,7 @@
     <ol>
     <li><h4><a href="1.html">html</a></li>
     <li><h4><a href="2.html">css</a></li>
-    <li><h4><a href="3.html">jS</a></li>
+    <li><h4><a href="3.html"><font color="red">jS</font></a></li>
     <li><h4><a href="연습.html">연습</a></li>
 </ol>
 
