--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1><a href="index.html" title="하이여">
-        WEB</a></h1>
+       <font color="red">WEB</font></a></h1>
     <ol>
     <li><h4><a href="1.html">html</a></li>
     <li><h4><a href="2.html">css</a></li>
