--- a/연습.html
+++ b/연습.html
@@ -10,7 +10,7 @@
     <li><h4><a href="1.html">html</a></li>
     <li><h4><a href="2.html">css</a></li>
     <li><h4><a href="3.html">jS</a></li>
-    <li><h4><a href="연습.html">연습</a></li>
+    <li><h4><a href="연습.html"><font color="red">연습</font></a></li>
 </ol>
 <h2>연습용이요</h2>
 
